Fixes: NB#286697 - In landscape mode, backspace key is missing in hebrew vkb layout
RevBy: TrustMe
Details: Wrong styling pushed backspace key out of screen.

--- a/m-keyboard/theme/libmeego-keyboard.css
+++ b/m-keyboard/theme/libmeego-keyboard.css
@@ -532,8 +532,9 @@ MImAbstractKeyAreaStyle.Portrait:keys47 {
 MImAbstractKeyAreaStyle.Landscape:hebrew {
     use-fixed-key-width: true;
 
-    key-width-medium-fixed: 86px;
-    key-width-x-large-fixed: 133px;
+    key-width-large-fixed: 88px;
+    key-width-x-large-fixed: 112px;
+    key-width-xx-large-fixed: 160px;
 }
 
 MImAbstractKeyAreaStyle.Portrait:hebrew {
